WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39819
[Qt] REGRESSION(
r60258
): It broke 10 tests.
https://bugs.webkit.org/show_bug.cgi?id=39819
Summary
[Qt] REGRESSION(r60258): It broke 10 tests.
Csaba Osztrogonác
Reported
2010-05-27 01:08:46 PDT
http://build.webkit.org/results/Qt%20Linux%20Release/r60258%20(12428)/results.html
Attachments
Patch
(3.80 KB, patch)
2010-05-27 10:54 PDT
,
Anders Carlsson
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2010-05-27 01:31:22 PDT
I'm on a conference and I can't investigate this regression now, and I think the author and the reviewer is sleeping now, so I put the tests into the skipped list temporarily, because we don't want to block commit queue.
http://trac.webkit.org/changeset/60281
Anders Carlsson
Comment 2
2010-05-27 10:54:59 PDT
Created
attachment 57259
[details]
Patch
Anders Carlsson
Comment 3
2010-05-27 10:55:46 PDT
Ignore the unrelated WebKit2 patch.
Csaba Osztrogonác
Comment 4
2010-05-27 11:51:59 PDT
(In reply to
comment #2
)
> Created an attachment (id=57259) [details] > Patch
LGTM. I tested this patch (ignoring unrelated WebKit2 changes) and it works without any regression. It is a good fix, as GTK fix landed before:
http://trac.webkit.org/changeset/60260
I'd like to give you an r+, but I'm not a reviewer to do it.
Adam Roben (:aroben)
Comment 5
2010-05-27 11:59:35 PDT
Comment on
attachment 57259
[details]
Patch r=me if you remove the WebKit2 stuff
Anders Carlsson
Comment 6
2010-05-27 12:08:01 PDT
Committed
r60316
: <
http://trac.webkit.org/changeset/60316
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug