2010-05-27  Anders Carlsson  <andersca@apple.com>

Reviewed by Adam Roben.

        [Qt] REGRESSION(r60258): It broke 10 tests.
        https://bugs.webkit.org/show_bug.cgi?id=39819

        * plugins/qt/PluginDataQt.cpp:
        (WebCore::PluginData::initPlugins):
        Append the MimeClassInfo object after it's been initialized.
2010-05-27  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam Roben.

        [Qt] REGRESSION(r60258): It broke 10 tests.
        https://bugs.webkit.org/show_bug.cgi?id=39819

        Remove tests from the skipped list.

        * platform/qt/Skipped:


Canonical link: https://commits.webkit.org/51367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60316 268f45cc-cd09-0410-ab3c-d52691b4dbfc